--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,4 @@
-html,body { width: 100%; height: 100%; }
+html,body { width: 100%; height: 120%; }
 
 /* Changing fonts */
 	@font-face {font-family: "FTB"; src: url("../fonts/FTB.ttf"); }
@@ -126,4 +126,25 @@ body{
 	display:inline-block;
 	transform: translate(-50%, -50%);
 
+}
+.java{
+	position: absolute;
+	top:100%;
+	left:50%;
+	display:inline-block;
+	transform: translate(-50%, -50%);
+}
+.jquery{
+	position: absolute;
+	top:110%;
+	left:50%;
+	display:inline-block;
+	transform: translate(-50%, -50%);
+}
+.prototype{
+	position: absolute;
+	top:120%;
+	left:50%;
+	display:inline-block;
+	transform: translate(-50%, -50%);
 }
