--- a/dream_vaca/css/main.css
+++ b/dream_vaca/css/main.css
@@ -1,7 +1,5 @@
-/*html, body {width:100%, height:100%;}
-	@font-face {font-family: "Trade_Gothic_LT_Bold"; src: url("../fonts/Trade_Gothic_LT_Bold.ttf"); }
-	@font-face {font-family: "Trade_Gothic_LT"; src: url("../fonts/Trade_Gothic_LT.ttf"); }
-	@font-face {font-family: "Trade_Gothic_LT_Light"; src: url("../fonts/Trade_Gothic_LT_Light.ttf"); }
+html, body {width:100%, height:100%;}
+
 
 body{
 	background-color: #ff1a8c;
@@ -11,24 +9,24 @@ body{
 	position:absolute;
 	width:20%;
 	height:auto;
-	left:50%;
+/*	left:50%;
 	top:50%;
-	transform: translate(-50%, -50%);
+	transform: translate(-50%, -50%);*/
 	transition-duration: 1s;
-	cursor: pointer;
+/*	cursor: pointer;*/
 }
 .one{
 	opacity: 1;
 }
 .two, .three, .four, .five, .six{
 	opacity: 0;
-}*/
+}
 
-#move {
+/*#move {
     width:50px;
     height:50px;
     border: 1px solid green;
     background-color: gray;
     text-align:center;
     position:relative;
-}
+}*/
