--- a/dream_vaca/css/main.css
+++ b/dream_vaca/css/main.css
@@ -4,6 +4,7 @@ html, body {width:100%, height:100%;}
 body{
 	background-color: #ff1a8c;
 	margin:0;
+
 }
 
 #icecream{
@@ -15,4 +16,21 @@ body{
 	top:50%;
 	transform: translate(-50%, -50%);
 	transition-duration: 0.1s;
+}
+
+.title{
+	font-family: Avenir; 
+	font-size: 1em;
+	position: absolute;
+	opacity: 0;
+    animation: fade 2s linear;
+	bottom:25%;
+	left:50%;
+	color: white;
+	transform: translate(-50%, -50%);
+}
+@keyframes fade {
+    0%   {opacity:0;}
+    50%  {opacity:1;}
+    100%  {opacity:0;}
 }
