--- a/dream_vaca/css/main.css
+++ b/dream_vaca/css/main.css
@@ -1,10 +1,11 @@
 html, body {width:100%, height:100%;}
 
 
-body{
-	background-color: #ff1a8c;
+html, body{
+	/*background-color: #ff1a8c;*/
 	margin:0;
-
+	/*cursor: url(../img/cursor.png), auto;*/
+/*	cursor: pointer;*/
 }
 
 #icecream{
@@ -15,7 +16,8 @@ body{
 	left:50%;
 	top:50%;
 	transform: translate(-50%, -50%);
-	transition-duration: 0.1s;
+	transition-duration: 0.15s;
+
 }
 
 .title{
