--- a/dream_vaca/css/main.css
+++ b/dream_vaca/css/main.css
@@ -4,7 +4,8 @@ html, body {width:100%, height:100%;}
 html, body{
 	/*background-color: #ff1a8c;*/
 	margin:0;
-	/*cursor: url(../img/cursor.png), auto;*/
+	cursor:url(https://portfolio.newschool.edu/lie771/files/2018/05/Artboard-3-copy-18-15khlt3.png), auto;
+
 /*	cursor: pointer;*/
 }
 
